--- a/module7/src/StoreOfBuild.Web/Views/Shared/_Layout.cshtml
+++ b/module7/src/StoreOfBuild.Web/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - StoreOfBuild.Web</title>
 <link rel="stylesheet" href="~/css/site.min.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.css" />
    
 </head>
 <body>
@@ -54,6 +55,7 @@
                 crossorigin="anonymous"
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
 
