Add identity falta userIdentity

--- a/module7/src/StoreOfBuild.Web/Views/Category/CreateOrEdit.cshtml
+++ b/module7/src/StoreOfBuild.Web/Views/Category/CreateOrEdit.cshtml
@@ -14,7 +14,7 @@
 
 <div class="row form-wrapper" >
     <div class="col-md-12">
-        <form id="form" class="form-horizontal" asp-action="CreateOrEdit" asp-controller="Category"
+        <form id="form" class="form-horizontal" asp-action="CreateOrEdit" asp-controller="/Category"
         data-ajax="true" data-ajax-method="post" data-ajax-failure="formOnFail" data-ajax-success="window.location ='/Category'" asp-anti-forgery>
            <input type="hidden" asp-for="Id" />
             <div class="form-group">
