--- a/module7/src/StoreOfBuild.Web/Views/Account/Login.cshtml
+++ b/module7/src/StoreOfBuild.Web/Views/Account/Login.cshtml
@@ -1,17 +1,17 @@
 @model StoreOfBuild.Web.ViewModels.LoginViewModel;
 
 @{
-    ViewData["Title"]="Login"
+    ViewData["Title"]="Login";
 }
 
 <h2>@ViewData["Title"].</h2>
 <div class="row">
     <div class="col-md-8">
         <section>
-            <form asp-controller="Acount" asp-action="Login" method="post" class="form-horizontal">
+            <form asp-controller="Account" asp-action="Login" method="post" class="form-horizontal">
                 <h4>Use a local account to login</h4>
                 <hr>
-                <div asp-validation-summary="all" class="text-danger"></div>
+                <div class="text-danger"></div>
                     <div class="form-group">
                         <label asp-for="Email" class="col-md-2 control-label"></label>
                         <div class="col-md-10">
