--- a/module7/src/StoreOfBuild.Web/Views/Account/Login.cshtml
+++ b/module7/src/StoreOfBuild.Web/Views/Account/Login.cshtml
@@ -9,7 +9,7 @@
     <div class="col-md-8">
         <section>
             <form asp-controller="Account" asp-action="Login" method="post" class="form-horizontal">
-                <h4>Use a local account to login</h4>
+                <h1>Login</h1>
                 <hr>
                 <div class="text-danger"></div>
                     <div class="form-group">
